Fixed word wrap in the main nav menu title

--- a/meteor/client/ui/components/nav_menus/main_nav/main_nav_menu.css
+++ b/meteor/client/ui/components/nav_menus/main_nav/main_nav_menu.css
@@ -104,6 +104,7 @@
   width: 700px;
   padding: 0 0 0 150px;
   font-size: 32px;
+  white-space: nowrap;
 }
 
 .nav-title a {
